# Team_project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.IN  README.md  key  pyproject.toml  requirements.txt  setup.py  test.py
bithive_bot/src/: __init__.py  data_storage.py
bithive_bot/src/addressbook/: __init__.py  addressbook_main.py
bithive_bot/src/file_sorter/: __init__.py  sorter.py
bithive_bot/src/notebook/: __init__.py  classes.py  handler.py  main.py
bithive_bot/src/openai_gpt/: __init__.py  gpt_app.py
file-sorter/: README.txt  sorter2.py
notebook/: classes.py  handler.py  main.py  note_book.txt  requirements.txt
openai_gpt/: commands_parser.py  gpt_app.py  gpt_response.py  handlers.py
src/: __init__.py  abstraction.py  data_storage.py  logo.py  menu.py  test.py
src/addressbook/: README.txt  __init__.py  addressbook_class.py  addressbook_main.py
src/cli_bot/: __init__.py  address_book.py  classes.py  commands_parser.py  error_handlers.py  handlers.py  openai_logic.py  table_constructor.py
src/file-sorter/: sorter2.py
src/file_sorter/: README.txt  __init__.py  sorter.py
src/notebook/: README.txt  __init__.py  classes.py  handler.py  main.py  note_book.txt  requirements.txt
src/openai_gpt/: README.txt  __init__.py  gpt_app.py  gpt_response.py  handlers.py
src/updated_addressbook/: error_handlers.py  handlers.py  main.py
src/updated_sorter/: ___init___.py  main.py  tools.py
src/utilities/: __init__.py  command_completer.py  commands_parser.py  error_handler.py  error_handlers.py  parsers.py
